# NV-DataGenerator

./: .gitignore  Demo.md  README.md  cloudbuild.yaml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: __init__.py  job.py  transcript.py
backend/app/routers/: __init__.py  generate.py  industries.py  jobs.py  settings.py
backend/app/services/: __init__.py  job_store.py  transcript_generator.py
backend/app/templates/: __init__.py
backend/app/templates/industries/: __init__.py  base.py  finance.py  healthcare.py  insurance.py  retail.py  telecom.py  travel.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigOptions.tsx  ExportPanel.tsx  Header.tsx  IndustrySelector.tsx  JobHistory.tsx  ScenarioSelector.tsx  SettingsModal.tsx  TranscriptPreview.tsx
frontend/src/data/: industries.ts
frontend/src/services/: api.ts
frontend/src/stores/: configStore.ts
frontend/src/types/: index.ts
